--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -29,6 +29,8 @@ en:
         page_title: "Details for %{model_label} '%{object_label}'"
         menu_item: "Show"
         breadcrumb: "%{object_label}"
+      show_in_app:
+        menu_item: "See in application"
       new:
         page_title: "New %{model_label}"
         menu_item: "Add new"
