--- a/config/locales/rails_admin.nb.yml
+++ b/config/locales/rails_admin.nb.yml
@@ -1,113 +1,58 @@
 # Norwegian, norsk bokmål (for Rails Admin)
 # Contributors:
 # - Theodor Tonum - www.yenka.no
-
 nb:
-  home:
-    name: "hjem"
-  views:
-    pagination:
-      previous: "&laquo; Prev"
-      next: "Next &raquo;"
-      truncate: "…"
   admin:
-    dashboard:
-      page_name: "Sideadministrasjon"
-      name: "Kontrollpanel"
-      model_name: "Modellnavn"
-      last_used: "Sist brukt"
-      records: "Oppføringer"
-      modify: "Redigere"
-      add_new: "Legge til ny"
-      show: "Vise"
-      ago: "siden"
-      navigation: "Navigasjon"
-    history:
-      name: "Historikk"
-      page_name: "Historikk for %{name}"
-      no_activity: "Ingen aktivitet"
-    show:
-      show_in_app: "Vis i app"
-      page_name: "Detaljer for %{name}"
-      no_file_found: "Fil ikke funnet"
-    credentials:
-      log_out: "Logg ut"
-    index:
-      edit_action: "Rediger"
-      delete_action: "Slett"
-      select_action: "Velg"
-      export_action: "Eksportér denne visningen"
-      export_selected: "Eksportér valgte"
-      delete_selected: "Slett valgte"
-      add_new: "Legg til ny"
-      search: "Søk"
-      select: "Velg %{name} for redigering"
-      show_all: "Vis alle"
-      add_filter: "Legg til filter"
-    new:
-      basic_info: "Grunnleggende info"
-      required: "Påkrevd"
-      optional: "Valgfritt"
-      one_char: "tegn."
-      many_chars: "eller færre tegn."
-      chosen: "Markér %{name}"
-      select_choice: "Markér dine valg og klikk"
-      chose_all: "Markér alle"
-      clear_all: "Fjern alle"
-      up: "Opp"
-      down: "Ned"
-      save: "Lagre"
-      save_and_add_another: "Lagre og legg til ny"
-      save_and_edit: "Lagre og fortsett redigering"
-      cancel: "Avbryt"
-    delete:
-      all_of_the_following_related_items_will_be_deleted: "? De følgende assosierte oppføringene kan bli slettet eller forlatt:"
-      are_you_sure_you_want_to_delete_the_object: "Er du sikker på at du vil slette denne %{model_name}"
-      confirmation: "Ja, jeg er sikker"
-      delete_confirmation: "Bekreft sletting"
-      bulk_delete: "De følgende objektene bli slettet, som også kan påvirke assosierte objekter:"
-    export:
-      confirmation: "Eksportér til %{name}"
-      select: "Velg felter for eksport"
-      fields_from: "Felt fra %{name}"
-      fields_from_associated: "Felt fra assossiert %{name}"
-      display: "Vis %{name}: %{type}"
-      options_for: "Valg for %{name}"
-      empty_value_for_associated_objects: "<blank>"
-      click_to_reverse_selection: 'Klikk for å inkludere/ekskludere utvalget'
-      csv:
-        header_for_root_methods: "%{name}" # 'model' is available
-        header_for_association_methods: "%{name} [%{association}]"
-        encoding_to: "Tegnkoding"
-        encoding_to_help: "Velg tegnkoding. La stå blank for å standard (%{name})"
-        skip_header: "Ingen topptekst"
-        skip_header_help: "Ikke eksporter topptekst (ingen feltbeskrivelse)"
-        default_col_sep: ","
-        col_sep: "Kolonneseparator"
-        col_sep_help: "La stå blank for å standard ('%{value}')" # value is default_col_sep
-    flash:
-      successful: "%{name} er nå %{action}"
-      error: "%{name} ble ikke %{action}"
-      noaction: "Ingen handlinger ble utført"
-      model_not_found: "Model '%{model}' could not be found"
-      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
-      create: "opprette"
-      created: "opprettet"
-      update: "oppdatere"
-      updated: "oppdatert"
-      delete: "slette"
-      deleted: "slettet"
-      export: "eksportere"
-      exported: "eksportert"
-    breadcrumbs:
-      delete: "slette"
-      history_show: "historikk"
-      show: "vise"
-      edit: "redigere"
-      export: "eksportere"
-      bulk_destroy: "slette"
-      new: "ny"
-      history_index: "historikk"
-      index: "liste"
-      dashboard: "dashboard"
+      dashboard:
+        page_title: "Sideadministrasjon"
+        menu_item: "Dashboard"
+        breadcrumb: "Dashboard"
+      index:
+        page_title: "Liste over %{model_label_plural}"
+        menu_item: "Liste"
+        breadcrumb: "%{model_label_plural}"
+      show:
+        page_title: "Detaljer for %{model_label} '%{object_label}'"
+        menu_item: "Vis"
+        breadcrumb: "%{object_label}"
+      show_in_app:
+        menu_item: "Vis i app"
+      new:
+        page_title: "Ny %{model_label}"
+        menu_item: "Legg til ny"
+        breadcrumb: "Ny"
+        link: "Opprett ny %{model_label}"
+        done: "opprettet"
+      edit:
+        page_title: "Oppdater %{model_label} '%{object_label}'"
+        menu_item: "Rediger"
+        breadcrumb: "Rediger"
+        link: "Oppdater denne %{model_label}"
+        done: "oppdatert"
+      delete:
+        page_title: "Slett %{model_label} '%{object_label}'"
+        menu_item: "Slette"
+        breadcrumb: "Slett"
+        link: "Slett '%{object_label}'"
+        done: "slettet"
+      bulk_delete:
+        page_title: "Slett %{model_label_plural}"
+        menu_item: "Slett flere"
+        breadcrumb: "Slett flere"
+        bulk_link: "Slett valgte %{model_label_plural}"
+      export:
+        page_title: "Export %{model_label}"
+        menu_item: "Eksporter"
+        breadcrumb: "Eksporter"
+        link: "Eksporter resulater av %{model_label_plural}"
+        bulk_link: "Eksportér valgte %{model_label_plural}"
+        done: "eksportert"
+      history_index:
+        page_title: "Historikk for %{model_label_plural}"
+        menu_item: "Historikk"
+        breadcrumb: "Historikk"
+      history_show:
+        page_title: "Historikk for %{model_label} '%{object_label}'"
+        menu_item: "Historikk"
+        breadcrumb: "Historikk"
