--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -1,107 +1,98 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
   home:
-    name: "home"
+    name: Home
   views:
     pagination:
       previous: "&laquo; Prev"
       next: "Next &raquo;"
       truncate: "…"
   admin:
+    misc:
+      search: "Search"
+      filter: "Filter"
+      refresh: "Refresh"
+      show_all: "Show all"
+      add_filter: "Add filter..."
+      bulk_menu_title: "Selected items..."
+      remove: "Remove"
+      add_new: "Add new"
+      chosen: "Chosen %{name}"
+      chose_all: "Choose all"
+      clear_all: "Clear all"
+      up: "Up"
+      down: "Down"
+      navigation: "Navigation"
+      log_out: "Log out"
+      ago: "ago"
     flash:
       successful: "%{name} successfully %{action}"
       error: "%{name} failed to be %{action}"
       noaction: "No actions were taken"
       model_not_found: "Model '%{model}' could not be found"
       object_not_found: "%{model} with id '%{id}' could not be found"
+    table_headers:
+      model_name: "Model name"
+      last_used: "Last used"
+      records: "Records"
+      username: "User"
+      changes: "Changes"
+      created_at: "Date/Time"
+      item: "Item"
+      message: "Message"
     actions:
       dashboard:
-        page_title: "Site administration"
-        menu_item: "Dashboard"
+        title: "Site administration"
+        menu: "Dashboard"
         breadcrumb: "Dashboard"
       index:
-        page_title: "List of %{model_label_plural}"
-        menu_item: "List"
+        title: "List of %{model_label_plural}"
+        menu: "List"
         breadcrumb: "%{model_label_plural}"
       show:
-        page_title: "Details for %{model_label} '%{object_label}'"
-        menu_item: "Show"
+        title: "Details for %{model_label} '%{object_label}'"
+        menu: "Show"
         breadcrumb: "%{object_label}"
       show_in_app:
-        menu_item: "Show in app"
+        menu: "Show in app"
       new:
-        page_title: "New %{model_label}"
-        menu_item: "Add new"
+        title: "New %{model_label}"
+        menu: "Add new"
         breadcrumb: "New"
-        link: "Create a new %{model_label}"
+        link: "Add a new %{model_label}"
         done: "created"
       edit:
-        page_title: "Update %{model_label} '%{object_label}'"
-        menu_item: "Edit"
+        title: "Edit %{model_label} '%{object_label}'"
+        menu: "Edit"
         breadcrumb: "Edit"
-        link: "Update this %{model_label}"
+        link: "Edit this %{model_label}"
         done: "updated"
       delete:
-        page_title: "Delete %{model_label} '%{object_label}'"
-        menu_item: "Delete"
+        title: "Delete %{model_label} '%{object_label}'"
+        menu: "Delete"
         breadcrumb: "Delete"
         link: "Delete '%{object_label}'"
         done: "deleted"
       bulk_delete:
-        page_title: "Delete %{model_label_plural}"
-        menu_item: "Multiple delete"
+        title: "Delete %{model_label_plural}"
+        menu: "Multiple delete"
         breadcrumb: "Multiple delete"
         bulk_link: "Delete selected %{model_label_plural}"
       export:
-        page_title: "Export %{model_label}"
-        menu_item: "Export"
+        title: "Export %{model_label}"
+        menu: "Export"
         breadcrumb: "Export"
         link: "Export found %{model_label_plural}"
         bulk_link: "Export selected %{model_label_plural}"
         done: "exported"
       history_index:
-        page_title: "History for %{model_label_plural}"
-        menu_item: "History"
+        title: "History for %{model_label_plural}"
+        menu: "History"
         breadcrumb: "History"
       history_show:
-        page_title: "History for %{model_label} '%{object_label}'"
-        menu_item: "History"
+        title: "History for %{model_label} '%{object_label}'"
+        menu: "History"
         breadcrumb: "History"
-    
-    
-    
-    
-    dashboard:
-      name: "Dashboard"
-      model_name: "Model name"
-      last_used: "Last used"
-      records: "Records"
-      modify: "Modify"
-      add_new: "Add new"
-      show: "Show"
-      ago: "ago"
-      navigation: "Navigation"
-    show:
-      show_in_app: "Show in app"
-      no_file_found: "No file found"
-    index:
-      edit_action: "Edit"
-      delete_action: "Delete"
-      selected: "Selected"
-      select_action: "Select"
-      export_action: 'Export'
-      export_current_action: "Export current view"
-      show_action: "Show"
-      export_selected: "Export"
-      delete_selected: "Delete"
-      add_new: "Add new"
-      search: "Search"
-      refresh: "Refresh"
-      show_all: "Show all"
-      add_filter: "Add filter"
-    new:
+    form:
       cancel: "Cancel"
       basic_info: "Basic info"
       required: "Required"
@@ -109,16 +100,9 @@ en:
       one_char: "character"
       char_length_up_to: "length up to"
       char_length_of: "length of"
-      chosen: "Chosen %{name}"
-      select_choice: "Select your choice(s) and click"
-      chose_all: "Choose all"
-      clear_all: "Clear all"
-      up: "Up"
-      down: "Down"
       save: "Save"
       save_and_add_another: "Save and add another"
       save_and_edit: "Save and edit"
-    delete:
       all_of_the_following_related_items_will_be_deleted: "? The following related items may be deleted or orphaned:"
       are_you_sure_you_want_to_delete_the_object: "Are you sure you want to delete this %{model_name}"
       confirmation: "Yes, I'm sure"
@@ -143,8 +127,3 @@ en:
         default_col_sep: ","
         col_sep: "Column separator"
         col_sep_help: "Leave blank for default ('%{value}')" # value is default_col_sep
-    history:
-      name: "History"
-      no_activity: "No Activity"
-    credentials:
-      log_out: "Log out"
