backport TableSorter CSS [ci skip]

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -12,8 +12,8 @@ en:
       filter: "Filter"
       refresh: "Refresh"
       show_all: "Show all"
-      add_filter: "Add filter..."
-      bulk_menu_title: "Selected items..."
+      add_filter: "Add filter"
+      bulk_menu_title: "Selected items"
       remove: "Remove"
       add_new: "Add new"
       chosen: "Chosen %{name}"
