provide default rails_admin help message so that it can be integrated in the overridden help text if desired. using e.g. "Team Name Help Text. %{help}"

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -128,7 +128,7 @@ en:
       new_model: "%{name} (new)"
     help:
       team:
-        name: "Team Name Help Text"
+        name: "Team Name Help Text."
     export:
       confirmation: "Export to %{name}"
       select: "Select fields to export"
