Add instance option 'confirmation_required' that will require that an option shows a confirmation prompt

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -58,6 +58,7 @@ en:
       item: "Item"
       message: "Message"
     actions:
+      confirm_prompt: "Are you sure?"
       dashboard:
         title: "Site Administration"
         menu: "Dashboard"
